--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -10,6 +10,8 @@
     <meta name="description" content="@@DESCRIPTION" />
     <meta name="keywords" content="@@KEYWORDS" />
 
+    <link rel="author" href="humans.txt" />
+
     <link rel="shortcut icon" href="images/favicon.png">
 
     <link rel="icon" type="image/png" href="images/favicon.png">
