--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,7 +31,9 @@
 
 @import "inuit-list-block/objects.list-block",
         "inuit-list-inline/objects.list-inline",
+        "inuit-flag/objects.flag",
         "inuit-buttons/objects.buttons",
+        "objects/flag",
         "objects/buttons";
 
 @import "components/hero",
