chore: kill ref to rdio :(

--- a/app/_includes/hero.html
+++ b/app/_includes/hero.html
@@ -6,7 +6,7 @@
 
     <li><a href="http://github.com/kuatsure" class="ss-icon ss-social">octocat</a></li>
 
-    <li><a href="http://www.rdio.com/people/kuatsure" class="ss-icon ss-social">rdio</a></li>
+    <!-- <li><a href="https://open.spotify.com/user/kuatsure" class="ss-icon ss-social">spotify</a></li> -->
 
     <!-- <li><a href="/articles" class="ss-icon ss-standard">openbook</a></li> -->
 
