--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,42 +1,42 @@
 // Screen Manifest
 
-@import "settings.variables";
+@import 'settings.variables';
 
-@import "helpful-helpers/helpful-helpers";
+@import 'helpful-helpers/helpful-helpers';
 
-@import "symbolset-sass/ss-standard",
-        "symbolset-sass/ss-social-regular";
+@import 'symbolset-sass/ss-standard',
+        'symbolset-sass/ss-social-regular';
 
-@import "bootstrap/assets/stylesheets/bootstrap/variables",
-        "bootstrap/assets/stylesheets/bootstrap/mixins",
-        "bootstrap/assets/stylesheets/bootstrap/utilities",
-        "bootstrap/assets/stylesheets/bootstrap/component-animations";
+@import 'bootstrap/assets/stylesheets/bootstrap/variables',
+        'bootstrap/assets/stylesheets/bootstrap/mixins',
+        'bootstrap/assets/stylesheets/bootstrap/utilities',
+        'bootstrap/assets/stylesheets/bootstrap/component-animations';
 
-@import "inuit-responsive-settings/settings.responsive",
-        "inuit-defaults/settings.defaults";
+@import 'inuit-responsive-settings/settings.responsive',
+        'inuit-defaults/settings.defaults';
 
-@import "inuit-responsive-tools/tools.responsive",
-        "inuit-functions/tools.functions",
-        "inuit-mixins/tools.mixins";
+@import 'inuit-responsive-tools/tools.responsive',
+        'inuit-functions/tools.functions',
+        'inuit-mixins/tools.mixins';
 
-@import "inuit-normalize/generic.normalize",
-        "inuit-box-sizing/generic.box-sizing";
+@import 'inuit-normalize/generic.normalize',
+        'inuit-box-sizing/generic.box-sizing';
 
-@import "inuit-page/base.page",
-        "inuit-headings/base.headings",
-        "inuit-images/base.images",
-        "inuit-paragraphs/base.paragraphs",
-        "inuit-lists/base.lists",
-        "base/page";
+@import 'inuit-page/base.page',
+        'inuit-headings/base.headings',
+        'inuit-images/base.images',
+        'inuit-paragraphs/base.paragraphs',
+        'inuit-lists/base.lists',
+        'base/page';
 
-@import "inuit-list-block/objects.list-block",
-        "inuit-list-inline/objects.list-inline",
-        "inuit-flag/objects.flag",
-        "inuit-buttons/objects.buttons",
-        "objects/flag",
-        "objects/buttons";
+@import 'inuit-list-block/objects.list-block',
+        'inuit-list-inline/objects.list-inline',
+        'inuit-flag/objects.flag',
+        'inuit-buttons/objects.buttons',
+        'objects/flag',
+        'objects/buttons';
 
-@import "components/hero",
-        "components/author",
-        "components/links",
-        "components/main";
+@import 'components/hero',
+        'components/author',
+        'components/links',
+        'components/main';
