--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
   height: 16em;
-  background: transparent url( '../images/background-equipment.png' ) center 35% no-repeat;
+  background: transparent url( '/assets/images/background-equipment.png' ) center 35% no-repeat;
   background-size: cover;
   transition: height .15s ease-in;
 
